src-tauri/tests/snapshots/indexing_output_test__indexing_file_completed.snap
---
source: tests/indexing_output_test.rs
assertion_line: 116
expression: event
---
{
  "type": "FileCompleted",
  "path": "[file_path]",
  "chunks": 12,
  "duration_ms": 1250,
  "current": 25,
  "total": 150
}
