src-tauri/tests/snapshots/indexing_output_test__indexing_file_error.snap
---
source: tests/indexing_output_test.rs
assertion_line: 130
expression: event
---
{
  "type": "FileError",
  "path": "[file_path]",
  "error": "Failed to extract text: invalid PDF structure",
  "current": 42,
  "total": 150
}
