src-tauri/tests/snapshots/indexing_output_test__indexing_file_started.snap
---
source: tests/indexing_output_test.rs
assertion_line: 101
expression: event
---
{
  "type": "FileStarted",
  "path": "[file_path]",
  "current": 1,
  "total": 150
}
